--- a/FilmStock/en.lproj/Localizable.strings
+++ b/FilmStock/en.lproj/Localizable.strings
@@ -281,6 +281,7 @@
 "add.rolls.section" = "Rolls";
 "add.rolls.hint" = "Add at least one roll to save this film.";
 "film.exposures.unspecified" = "Unspecified";
+"film.exposures.bulk" = "100ft bulk";
 "film.exposures.custom" = "Custom";
 "film.exposures.customCount" = "Number of exposures";
 "edit.rolls.title" = "Edit %@ Rolls";
