--- a/FilmStock/es.lproj/Localizable.strings
+++ b/FilmStock/es.lproj/Localizable.strings
@@ -281,6 +281,7 @@
 "add.rolls.section" = "Rollos";
 "add.rolls.hint" = "Añade al menos un rollo para guardar esta película.";
 "film.exposures.unspecified" = "Sin especificar";
+"film.exposures.bulk" = "100ft bulk";
 "film.exposures.custom" = "Personalizado";
 "film.exposures.customCount" = "Número de exposiciones";
 "edit.rolls.title" = "Editar rollos %@";
