--- a/FilmStock/ja.lproj/Localizable.strings
+++ b/FilmStock/ja.lproj/Localizable.strings
@@ -281,6 +281,7 @@
 "add.rolls.section" = "ロール";
 "add.rolls.hint" = "フィルムを保存するには、少なくとも1本のロールを追加してください。";
 "film.exposures.unspecified" = "未指定";
+"film.exposures.bulk" = "100ft bulk";
 "film.exposures.custom" = "カスタム";
 "film.exposures.customCount" = "コマ数を入力";
 "edit.rolls.title" = "%@ロールを編集";
