--- a/FilmStock/pl.lproj/Localizable.strings
+++ b/FilmStock/pl.lproj/Localizable.strings
@@ -281,6 +281,7 @@
 "add.rolls.section" = "Rolki";
 "add.rolls.hint" = "Dodaj przynajmniej jedną rolkę, aby zapisać ten film.";
 "film.exposures.unspecified" = "Nieokreślona";
+"film.exposures.bulk" = "100ft bulk";
 "film.exposures.custom" = "Własna";
 "film.exposures.customCount" = "Liczba klatek";
 "edit.rolls.title" = "Edytuj rolki %@";
